@@ -52,7 +52,8 @@
 			<label index="list.report.pageforbidden403">Accessing this address is not allowed (403).</label>
 			<label index="list.report.externalerror">External Link returned HTTP error code (%s).</label>
 			<label index="list.report.filenotexisting">File doesn't exist.</label>
-			<label index="list.msg.lastRun">%1$s %2$s</label>          
+			<label index="list.msg.lastRun">%1$s %2$s</label>
+			<label index="list.no.broken.links">No broken links to show!</label>
 		</languageKey>
 	</data>
 </T3locallang>
